--- a/application/src/app/app.component.html
+++ b/application/src/app/app.component.html
@@ -1,8 +1,46 @@
 <div style = "text-align:center">
-<h1>
-  Welcome to {{title}}!
+
+<h1 style = "font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;" >
+  Welcome to the Car Customizer
 
 </h1>
-<button class = "btn btn-primary">Download Pdf</button>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Find Dealers</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Select Car Brand
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Swift</a>
+          <a class="dropdown-item" href="#">R8</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something </a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+      </li>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search car,brands,parts" aria-label="Search">
+         </form>
+         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </ul>
+  </div>
+</nav>
+
+
+
 <div app-test></div>
 </div>
